# latrunculi

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
bench/: bench.py  bench_defs.hpp  benchmark.cpp  defs.hpp  direct_uci_bench.py  direct_uci_note.py  direct_uci_suite.tsv  search_experiment.py
bench/benchlib/: __init__.py  common.py  cpp.py  match.py  perft.py  uci.py
include/: base.hpp  bb.hpp  bb_utils.hpp  bitboard.hpp  board.hpp  chess.hpp  constants.hpp  context.hpp  defs.hpp  engine.hpp  eval.hpp  eval_base.hpp  eval_config.hpp  eval_constants.hpp  evaluator.hpp  fen.hpp  globals.hpp  heuristics.hpp  history.hpp  key_history.hpp  killers.hpp  magic.hpp  magic_tables.hpp  magics.hpp  move.hpp  move_list.hpp  move_order.hpp  move_ordering.hpp  move_picker.hpp  movegen.hpp  movegen_impl.hpp  options.hpp  perft.hpp  position_key_history.hpp  position_state.hpp  principal_variation.hpp  pv.hpp  root_line.hpp  score.hpp  search.hpp  (+21 more)
roadmap/: movegen-stage-refactor.md  p0-search-shape-overhead-baseline.md  p3-search-foundations.md  perf-roadmap.md  roadmap.md  uci-engine-cleanup-notes.md  uci-engine-cleanup.md
scripts/: play.sh
src/: board.cpp  board_fen.cpp  board_representation.cpp  board_see.cpp  chess.cpp  engine.cpp  eval.cpp  evaluator.cpp  fen.cpp  globals.cpp  magic.cpp  magic_tables.cpp  magics.cpp  main.cpp  make.cpp  move.cpp  move_picker.cpp  movegen.cpp  perft.cpp  root_line.cpp  score.cpp  search.cpp  search_limits.cpp  search_options.cpp  search_worker.cpp  thread.cpp  thread_pool.cpp  threading.cpp  tt.cpp  uci.cpp  uci_input.cpp  uci_options.cpp  uci_output.cpp  uci_writer.cpp  zobrist.cpp
src/board/: board.cpp  board.hpp  board_fen.cpp  board_format.hpp  board_legality.cpp  board_move.cpp  board_notation.cpp  board_notation.hpp  board_representation.cpp  board_rules.cpp  board_see.cpp  castling.hpp  castling_rights.hpp  fen.cpp  fen.hpp  ply_state.hpp  position_key_history.hpp  position_state.hpp  zobrist.cpp  zobrist.hpp
src/core/: attack_magic.cpp  attack_magic.hpp  attacks.hpp  attacks_magic.cpp  attacks_magic.hpp  bb.hpp  bitboard.hpp  constants.hpp  defs.hpp  magic.cpp  magic.hpp  move.cpp  move.hpp  move_geometry.hpp  notation.cpp  notation.hpp  piece.hpp  score.hpp  square.hpp  types.hpp  util.hpp
src/eval/: eval.hpp  evaluator.cpp  evaluator.hpp  tapered_score.hpp  types.hpp
src/movegen/: move_list.hpp  movegen.cpp  movegen.hpp  perft.cpp  perft.hpp
src/search/: history.hpp  move_ordering.hpp  move_picker.cpp  move_picker.hpp  principal_variation.hpp  root_line.cpp  root_line.hpp  search.cpp  search_instrumentation.hpp  search_limits.cpp  search_limits.hpp  search_worker.cpp  search_worker.hpp  tt.cpp  tt.hpp
src/uci/: engine.cpp  engine.hpp  threading.cpp  threading.hpp  uci_input.cpp  uci_options.cpp  uci_options.hpp  uci_writer.cpp  uci_writer.hpp
test/: BitboardTest.cpp  BoardTest.cpp  GlobalsTest.cpp  PerftTest.cpp  SearchTest.cpp  TypesTest.cpp  UciTest.cpp  ZobristTest.cpp
tests/: CMakeLists.txt  base.test.cpp  bb.test.cpp  bitboard.test.cpp  board.test.cpp  board_fen.test.cpp  board_representation.test.cpp  board_see.test.cpp  ccr.epd  chess.test.cpp  defs.test.cpp  demo.cpp  engine.test.cpp  epd.test.cpp  eval.test.cpp  evaluator.test.cpp  fen.test.cpp  globals.test.cpp  heuristics.test.cpp  history.test.cpp  killers.test.cpp  magic.test.cpp  magics.test.cpp  main.cpp  move.test.cpp  move_list.test.cpp  move_order.cpp  move_order.test.cpp  move_ordering.test.cpp  move_picker.test.cpp  movegen.test.cpp  perft.test.cpp  principal_variation.test.cpp  pv.test.cpp  score.test.cpp  search.test.cpp  search_instrumentation.test.cpp  search_limits.test.cpp  search_options.test.cpp  search_stats.test.cpp  (+14 more)
tests/bench/: benchmark.test.cpp  main.cpp
tests/board/: board.test.cpp  board_draw.test.cpp  board_fen.test.cpp  board_format.test.cpp  board_invariants.test.cpp  board_legality.test.cpp  board_move_application.test.cpp  board_notation.test.cpp  board_representation.test.cpp  board_root_copy.test.cpp  board_see.test.cpp  board_tactical_state.test.cpp  fen.test.cpp  fen_parser.test.cpp
tests/core/: attack_magic.test.cpp  attacks.test.cpp  attacks_magic.test.cpp  bb.test.cpp  bitboard.test.cpp  move.test.cpp  move_geometry.test.cpp  notation.test.cpp  piece.test.cpp  score.test.cpp  square.test.cpp  types.test.cpp
tests/eval/: eval.test.cpp  evaluator.test.cpp  tapered_score.test.cpp
tests/movegen/: move_list.test.cpp  movegen.test.cpp  perft.test.cpp
tests/search/: history.test.cpp  move_ordering.test.cpp  move_picker.test.cpp  principal_variation.test.cpp  search.test.cpp  search_limits.test.cpp  search_worker.test.cpp  tt.test.cpp
tests/support/: board_fixtures.hpp  board_harness.hpp  board_snapshot.hpp  test_util.hpp  thread_test_access.hpp
tests/uci/: engine.test.cpp  threading.test.cpp  uci_options.test.cpp  uci_writer.test.cpp
tests/unit/: base.test.cpp  bb.test.cpp  board.test.cpp  engine.test.cpp  eval.test.cpp  heuristics.test.cpp  magic.test.cpp  magics.test.cpp  main.cpp  move.test.cpp  move_order.cpp  movegen.test.cpp  score.test.cpp  search.test.cpp  search_stats.test.cpp  test_utils.hpp  thread.test.cpp  thread_pool.test.cpp  types.test.cpp  uci.test.cpp  uci_output.test.cpp
